<resources>
    <string name="app_name" translatable="false">Smart Bicycle</string>
    <string name="pass_hint">Enter Password</string>
    <string name="change_password">Change Password</string>
    <string name="start_ride">Start Ride</string>
    <string name="unlock">Unlock</string>
    <string name="view_analysis">View Analysis</string>
    <string name="background_image">Background image</string>
    <string name="view_data">View data</string>
    <string name="edit">Edit</string>
    <string name="name_desc">Name of the person using the app</string>
    <string name="please_edit_your_profile"><![CDATA[Please edit your profile ->]]></string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_view_data">View Previous Data</string>
    <string name="title_activity_analysis">Analysis</string>
    <string name="title_activity_ride">Ride</string>
    <string name="bpm"> BPM</string>
    <string name="kmph"> KMPH</string>
    <string name="view_previous_data">View Previous Data</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="distance_travelled">Distance Travelled:</string>
    <string name="km">KM</string>
    <string name="name">Name:</string>
    <string name="current_pulse_rate">Current Pulse Rate</string>
    <string name="go_back">Go Back</string>
    <string name="lock_device">Lock device</string>
    <string name="pulse_rate">Pulse Rate:</string>
    <string name="speed">Speed:</string>
    <string name="lock">Lock</string>
</resources>
