<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sarkar.smart_bicycle.ProfileActivity"
    tools:showIn="@layout/activity_profile">
    <RelativeLayout
        android:id="@+id/content_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_alignParentStart="true"
            android:hint="@string/name"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                tools:ignore="LabelFor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/name" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dob"
            android:layout_below="@+id/textView8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:inputType="none"
            android:gravity="center_vertical|start"
            android:onClick="setDate" />

        <TextView
            android:text="@string/distance_travelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_below="@+id/dob" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dist"
            android:layout_toEndOf="@+id/textView9"
            android:layout_alignTop="@+id/textView9" />

        <TextView
            android:text="@string/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_alignTop="@+id/dist"
            android:layout_toEndOf="@+id/dist" />
    </RelativeLayout>
</ScrollView>