<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ride"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sarkar.smart_bicycle.RideActivity"
    tools:showIn="@layout/activity_ride">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_centerHorizontal="true"
        android:id="@+id/GridLay">

        <Space
            android:minWidth="55dp"
            android:minHeight="25dp" />
        <Space
            android:minWidth="55dp"
            android:minHeight="25dp" />
        <Space
            android:minWidth="55dp"
            android:minHeight="25dp" />

        <TextView
            android:text="@string/pulse_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />
        <TextView
            android:minWidth="55dp"
            android:layout_height="wrap_content"
            android:id="@+id/BPM"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="textEnd"
            android:textStyle="normal|bold" />
        <TextView
            android:text="@string/bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />
        <TextView
            android:minWidth="55dp"
            android:layout_height="wrap_content"
            android:id="@+id/speed"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textAlignment="textEnd"
            android:textStyle="normal|bold" />
        <TextView
            android:text="@string/kmph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold" />
        <android.support.v4.widget.Space
            android:minHeight="20dp" />
    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GridLay"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dip" />

        <TextView
            android:text="@string/current_pulse_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:gravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:progressDrawable="@drawable/progress_circle_accent"
                android:layout_centerInParent="true"
                android:progress="0"
                android:max="100"
                android:secondaryProgress="100"/>

            <ImageView
                android:layout_width="59dp"
                android:layout_height="59dp"
                app:srcCompat="@drawable/white_circle"
                android:id="@+id/white_circle"
                android:layout_centerInParent="true"
                android:alpha="0.7"
                android:tint="#000"
                android:contentDescription=""
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/percent"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="0%"
                tools:ignore="HardcodedText" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maxPulse"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center" />

    </LinearLayout>

</RelativeLayout>
